--- a/Public/index.html
+++ b/Public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Where #TON💎 Adventurers Unite! Explore, Learn, and Grow Together in the World of TON Blockchain">
-    <link rel="stylesheet" href="/src/style.css">
-    <link rel="shortcut icon" href="/Public/images/nomads.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/nomads.ico" type="image/x-icon">
     <title>TonNomads</title>
 </head>
 <body>
@@ -59,7 +59,7 @@
         </div>
         <div class="largeicon">
             <div class="imgnomads">
-                <img src="/Public/images/nomads-removebg-preview.png" alt="" class="ico">
+                <img src="/nomads-removebg-preview.png" alt="" class="ico">
             </div>
             <div class="Fthead">
                 <h2 class="ft">The Future is with $TON</h2>
@@ -123,7 +123,7 @@
 
                 <div class="join">
                     <div class="jo1">
-                        <h1 class="jj">Join the Journey</h1>
+                        <h1 class="jj1">Join the Journey</h1>
                     </div>
                     <div class="whyj">
                         <p class="discuss">
@@ -139,7 +139,7 @@
                 </div>
                 <div class="imgdamx">
                     <div class="first">
-                        <img src="/Public/images/damx-removebg-preview.png  " alt="" class="dx">
+                        <img src="/damx-removebg-preview.png  " alt="" class="dx">
                     </div>
                     <div class="sec">
                         <h2 class="ddmx">
@@ -155,7 +155,7 @@
                 <div class="cont">
                     <div class="hod">
                         <div class="mtog">
-                            <img src="/Public/images/jeff-removebg-preview.png" alt="" class="jeff">
+                            <img src="/jeff-removebg-preview.png" alt="" class="jeff">
                         </div>
                         <div class="jf">
                             <p class="letter">
@@ -195,7 +195,7 @@
                     </div>
                     <div class="hod">
                         <div class="mtog">
-                            <img src="/Public/images/ndu_kam-removebg-preview.png" alt="" class="ndu">
+                            <img src="/ndu_kam-removebg-preview.png" alt="" class="ndu">
                         </div>
                         <div class="jf">
                             <p class="letter">
@@ -204,6 +204,96 @@
                         </div>
                         <div class="soc">
                             <a href="https://t.me/ndukam2026" target="_blank" aria-label="Telegram">
+                                <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                                    <title>Telegram icon</title>
+                                    <path id="sj" d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53 1.73z" fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hod">
+                        <div class="mtog">
+                            <img src="/hayeoon-removebg-preview.png" alt="" class="ndu">
+                        </div>
+                        <div class="jf">
+                            <p class="letter">
+                                Hayeon 💎
+                            </p>
+                        </div>
+                        <div class="soc">
+                            <a href="https://t.me/cryp_ton999" target="_blank" aria-label="Telegram">
+                                <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                                    <title>Telegram icon</title>
+                                    <path id="sj" d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53 1.73z" fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hod">
+                        <div class="mtog">
+                            <img src="quincy-removebg-preview.png" alt="" class="ndu">
+                        </div>
+                        <div class="jf">
+                            <p class="letter">
+                                Quincy 🐵
+                            </p>
+                        </div>
+                        <div class="soc">
+                            <a href="https://t.me/Quincy_213" target="_blank" aria-label="Telegram">
+                                <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                                    <title>Telegram icon</title>
+                                    <path id="sj" d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53 1.73z" fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hod">
+                        <div class="mtog">
+                            <img src="/lone_wolf-removebg-preview.png" alt="" class="ndu">
+                        </div>
+                        <div class="jf">
+                            <p class="letter">
+                                Lone Wolf 𖤍
+                            </p>
+                        </div>
+                        <div class="soc">
+                            <a href="https://t.me/Martinkush" target="_blank" aria-label="Telegram">
+                                <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                                    <title>Telegram icon</title>
+                                    <path id="sj" d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53 1.73z" fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hod">
+                        <div class="mtog">
+                            <img src="/alter-removebg-preview.png" alt="" class="ndu">
+                        </div>
+                        <div class="jf">
+                            <p class="letter">
+                                Alt Coiner
+                            </p>
+                        </div>
+                        <div class="soc">
+                            <a href="https://t.me/Sidney143" target="_blank" aria-label="Telegram">
+                                <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                                    <title>Telegram icon</title>
+                                    <path id="sj" d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53 1.73z" fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hod">
+                        <div class="mtog">
+                            <img src="/hermj.jpg" alt="" class="ndu1">
+                        </div>
+                        <div class="jf">
+                            <p class="letter">
+                                Her majesty 💞👸
+                            </p>
+                        </div>
+                        <div class="soc">
+                            <a href="https://t.me/Sidney143" target="_blank" aria-label="Telegram">
                                 <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
                                     <title>Telegram icon</title>
                                     <path id="sj" d="M23.91 3.79L20.3 20.84c-.25 1.21-.98 1.5-2 .94l-5.5-4.07-2.66 2.57c-.3.3-.55.56-1.1.56-.72 0-.6-.27-.84-.95L6.3 13.7l-5.45-1.7c-1.18-.35-1.19-1.16.26-1.75l21.26-8.2c.97-.43 1.9.24 1.53 1.73z" fill="#ffffff"/>
@@ -221,12 +311,11 @@
                 </div>
                 <div class="right">
                     <p class="rgt">
-                        © Ademileke(Coco.ton), TonNomads, 2024. 
+                        © Ademileke(Coco.ton), TonNomads, 92024. 
                     </p>
                 </div>
             </div>
         </div>
     </main>
-    <script src="/src/index.js"></script>
 </body>
 </html>
